# ProliferatingCellCollectives-IDP

./: .gitignore  README.md
analysis/: .gitignore  analyze.ipynb  analyze_combined.ipynb  analyze_hard.ipynb  analyze_soft.ipynb  cluster_analysis.ipynb  config_generator.py  data_loader.py  energy_surface.ipynb  growth_comparison.ipynb  growth_comparison.py  hard_scaling.py  load_combined.py  parse_vtu.py  plot_bbgdp.ipynb  plot_cfl.ipynb  plot_cluster_analysis.ipynb  plot_cluster_analysis_huge.ipynb  plot_combined.ipynb  plot_combined.py  plot_hard_scaling.ipynb  plot_hertzian.ipynb  plot_huge.ipynb  plot_hybrid_mpi.ipynb  plot_strong_scaling.ipynb  render_particles.py  simulation_pipeline.ipynb  stress.py  test.ipynb  wavelength.py
analysis/colony_renderer/: render.py
code/cpp/: CMakeLists.txt  launch.sh
code/cpp/cmake/modules/: petsc.cmake
code/cpp/src/: CMakeLists.txt  main.cpp
code/cpp/src/dynamics/: Constraint.cpp  Constraint.h  Physics.cpp  Physics.h  PhysicsEngine.cpp
code/cpp/src/dynamics/models/: Hard.cpp  Hard.h  Soft.cpp  Soft.h
code/cpp/src/dynamics/models/hard/: HardModelGradient.cpp  HardModelGradient.h  Workspace.cpp  Workspace.h
code/cpp/src/loader/: VTKStateLoader.cpp  VTKStateLoader.h
code/cpp/src/logger/: BBPGDLogger.cpp  BBPGDLogger.h  ParameterLogger.cpp  ParameterLogger.h  ParticleLogger.cpp  SimulationLogger.cpp  SimulationLogger.h  VTK.h
code/cpp/src/simulation/: Particle.cpp  Particle.h  ParticleData.h  ParticleManager.cpp  ParticleManager.h
code/cpp/src/solver/: BBPGD.cpp  BBPGD.h
code/cpp/src/spatial/: CollisionDetector.cpp  CollisionDetector.h  Domain.cpp  Domain.h  SpatialGrid.cpp  SpatialGrid.h
code/cpp/src/util/: CLIParser.h  Config.h  DynamicPetsc.h  MPIUtil.h  MetricsUtil.h  PetscRaii.h  Quaternion.cpp  SpherocylinderCell.h
code/python/: README.md
code/python/hard/: forces.py  generator.py  perf.txt  (+4 more)
data/: .gitignore  rename.py  scp.sh
demo/autopas-data-anlysis/: time.ipynb
demo/cpp/hard/: .gitignore  CMakeLists.txt  README.md  launch.sh
demo/cpp/hard/cmake/modules/: petsc.cmake
demo/cpp/hard/src/: CMakeLists.txt  Cell.cpp  main.cpp  petsc_example.cpp
demo/cpp/hard/src/dynamics/: Bacteria.h  BacterialSystem.cpp  BacterialSystem.h  Config.h  Constraint.cpp  Constraint.h  Forces.cpp  Forces.h  MappingManager.cpp  MappingManager.h  Particle.h  ParticleData.h  ParticleManager.cpp  ParticleManager.h  Physics.cpp  Physics.h  PhysicsEngine.cpp  PhysicsEngine.h
demo/cpp/hard/src/loader/: VTKStateLoader.cpp
demo/cpp/hard/src/logger/: ConstraintLogger.cpp  ConstraintLogger.h  DomainLogger.cpp  DomainLogger.h  ParameterLogger.cpp  ParticleLogger.cpp  ParticleLogger.h  SimulationLogger.cpp  SimulationLogger.h  VTK.cpp  VTK.h
demo/cpp/hard/src/simulation/: Particle.cpp  Particle.h  ParticleData.h  ParticleManager.cpp  ParticleManager.h
demo/cpp/hard/src/solver/: BBPGD.cpp  BBPGD.h  LCP.cpp  LCP.h
demo/cpp/hard/src/spatial/: CollisionDetector.cpp  CollisionDetector.h  ConstraintGenerator.cpp  ConstraintGenerator.h  Domain.cpp  Domain.h  SpatialGrid.cpp  SpatialGrid.h
demo/cpp/hard/src/util/: ArrayMath.h  CLIParser.h  Config.h  DynamicPetsc.h  MPIUtil.h  MetricsUtil.h  ParticleMPI.cpp  ParticleMPI.h  PetscRaii.h  PetscUtil.h  Quaternion.cpp  Quaternion.h  SpherocylinderCell.h
demo/hard/: capsula.py  constraint.py  distance.py  forces.py  generator.py  main.py  model.ipynb  optimization.py  perf.txt  physics.py  quaternion.py  stress.py  verletlist.py  visualization.py  vtk.py
demo/physics-tests/: Simulation.py  Spherocylinder.py  log.txt  main.py  sim.py
latex/: .gitignore  README.md  cell-collectives.tex  literature.bib
latex/figures/: reduce_size.py
presentation/: .gitignore  beamerthemelmtslides.sty  slides.tex
presentation/figures/: figures_paper
scripts/: growth_comparison.py  growth_comparison_job_inter.slurm  hard_scaling.py  hard_scaling_low.py  huge_scaling.py  inter_cfl.py  inter_growth_comparison.py  inter_hybrid_openmp.py  lambda_comparison.py  lambda_growh.py
visualization/: ParticleDebugger.pvsm  ParticleDebugger_hard.pvsm  ParticleDebugger_soft.pvsm  domain_decomposition.pvsm  obj_generator.ipynb  render.pvsm
(+16 files in other folders)
